[project]
name = "ml-tmbd-reccomendedmovie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nltk>=3.9.1",
    "pandas>=2.0.3",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.3.2",
    "streamlit>=1.40.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
